<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ListLauncher</string>
    <string name="app_package_name">sakuraba.saki.list.launcher</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_security_setting">Security Setting</string>
    <string name="menu_user_interface_setting">User Interface</string>
    <string name="menu_quick_access_setting">Quick Access Button</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_launch_app">Launching application…</string>
    <string name="menu_set_pin">Set Pin</string>
    <string name="menu_pin_auth">Verify Pin</string>
    <string name="menu_crop_image">Crop Image</string>
    <string name="setting_category_security">Security</string>
    <string name="menu_crop_image_save">Save</string>
    <string name="menu_crop_image_change_image">Change as…</string>
    <string name="application_info_application_name">Application Name</string>
    <string name="application_info_package_name">Package Name</string>
    <string name="application_info_installation_type">Application Type</string>
    <string name="application_info_system_application">System Application</string>
    <string name="application_info_user_installed">User-installed Application</string>
    <string name="application_info_version_name">Version Name</string>
    <string name="application_info_version_code">Version Code</string>
    <string name="application_info_setting_info">See application in System Setting</string>
    <string name="menu_setting_reset">Reset All</string>
    <string name="setting_reset_dialog_title">Confirm</string>
    <string name="setting_reset_dialog_message">Are you sure to reset all setting?</string>
    <string name="setting_reset_dialog_confirm">Confirm</string>
    <string name="setting_reset_dialog_cancel">Cancel</string>
    <string name="setting_category_configuration">Configuration</string>
    <string name="setting_category_application">Application</string>
    <string name="setting_about">About ListLauncher</string>
    <string name="setting_about_application_id_title">Package Name</string>
    <string name="setting_about_application_id_summary">@string/app_package_name</string>
    <string name="setting_about_version_name">Version Name</string>
    <string name="setting_about_version_code">Version Code</string>
    <string name="setting_about_build_type">Build Type</string>
    <string name="setting_project_github">Project Github Repo</string>
    <string name="setting_license_title">License</string>
    <string name="setting_license_summary">GNU General Public License v3.0</string>
    <string name="setting_restart">Restart</string>
    <string name="setting_restart_content">Restart now?</string>
    <string name="setting_restart_confirm">Restart</string>
    <string name="setting_auth_title">Authorization</string>
    <string name="setting_auth_summary">Authorize before launching application</string>
    <string name="setting_use_fingerprint_title">Fingerprint</string>
    <string name="setting_use_fingerprint_summary">Use Fingerprint to Authorize</string>
    <string name="setting_use_fingerprint_summary_not_available">Fingerprint Authorization is not supported by your OS or device</string>
    <string name="setting_use_pin_title">Pin</string>
    <string name="setting_use_pin_summary">Use 4-digit Pin to Authorize</string>
    <string name="setting_use_pin_should_enable_to_set">You should enable this option before editing the pin</string>
    <string name="user_interface_setting_background_title">Background</string>
    <string name="user_interface_setting_background_summary">Options on customizing background of the ListLauncher</string>
    <string name="user_interface_setting_nav_bar_title">Navigation Bar</string>
    <string name="user_interface_setting_nav_bar_summary">Option on customizing system navigation bar</string>
    <string name="user_interface_setting_status_bar_title">Status Bar</string>
    <string name="user_interface_setting_status_bar_summary">Option on customizing system status bar</string>
    <string name="user_interface_setting_toolbar_title">Toolbar</string>
    <string name="user_interface_setting_toolbar_summary">Option on customizing toolbar</string>
    <string name="user_interface_setting_text_title">Text color</string>
    <string name="user_interface_setting_text_summary">Option on customizing text color</string>
    <string name="setting_customize_title">Customize</string>
    <string name="setting_customize_summary">Customize your launcher</string>
    <string name="setting_custom_navigation_bar_title">Custom navigation bar</string>
    <string name="setting_custom_navigation_bar_summary">Make background full screen, and set with custom navigation color</string>
    <string name="setting_custom_navigation_bar_not_supported">The navigation bar is not enabled or not supported</string>
    <string name="setting_custom_navigation_bar_should_enable_to_set">You should enable this option before setting the navigation bar text color</string>
    <string name="setting_status_bar_black_text_title">Status bar text color</string>
    <string name="setting_status_bar_black_text_summary">Set text of text color as black\n(Some devices with Android L (both SDK 21, 22) may not work)</string>
    <string name="setting_custom_status_bar_color_title">Status bar color</string>
    <string name="setting_custom_status_bar_color_summary">Customize status bar color</string>
    <string name="setting_status_bar_snackbar_should_enable_to_set">You should enable this option before setting the status bar color</string>
    <string name="setting_custom_toolbar_bg_color_title">Toolbar color</string>
    <string name="setting_custom_toolbar_bg_color_summary">Customize toolbar color</string>
    <string name="setting_use_toolbar_light_title">Use light colored toolbar</string>
    <string name="setting_use_toolbar_light_summary">Enable light colored toolbar (Buttons and text set as black)</string>
    <string name="setting_toolbar_bg_snackbar_should_enable_to_set">You should enable this option before setting the custom color</string>
    <string name="setting_custom_background_image_title">Custom background image</string>
    <string name="setting_custom_background_image_summary">Use custom image as launcher background.\nClick here to select image.\nSystem wallpaper will be disabled when this option is enabled.</string>
    <string name="setting_background_snackbar_storing_image_fail">Storing image failed. Please try again later or contact the maintainer.</string>
    <string name="setting_background_snackbar_fetching_image_fail">Fetching image failed. Please try again later or contact the maintainer.</string>
    <string name="setting_background_snackbar_should_enable_to_set">You should enable this option before setting the custom image</string>
    <string name="setting_use_system_background_title">Use system wallpaper image</string>
    <string name="setting_use_system_background_summary">Use system wallpaper image as the background.\nCustom background image will be disabled when this option is enabled.</string>
    <string name="setting_blur_background_title">Blur background image</string>
    <string name="setting_blur_background_summary">Blur the background image.\nUsing custom background or system wallpaper should be enabled.\nClick to set blur radius</string>
    <string name="setting_blur_background_should_enable_to_set">You should enable this option before setting the radius</string>
    <string name="setting_blur_dialog_title">Set blur radius</string>
    <string name="setting_blur_dialog_positive">Confirm</string>
    <string name="setting_blur_dialog_negative">Cancel</string>
    <string name="setting_blur_dialog_default">Default</string>
    <string name="setting_custom_title_color_title">Custom title text color</string>
    <string name="setting_custom_title_color_summary">Use custom color of all title text</string>
    <string name="setting_custom_title_color_snackbar_should_enable_to_set">You should enable this option before setting the title text color</string>
    <string name="setting_custom_summary_color_title">Custom summary text color</string>
    <string name="setting_custom_summary_color_summary">Use custom color of all summary text</string>
    <string name="setting_custom_summary_color_snackbar_should_enable_to_set">You should enable this option before setting the summary text color</string>
    <string name="setting_quick_access_icon_title">Icons</string>
    <string name="setting_quick_access_icon_summary">Set different colors of the quick access icons</string>
    <string name="setting_quick_access_icon_color_normal_title">Icon color (normal)</string>
    <string name="setting_quick_access_icon_color_normal_summary">Color of the icons when it is not touched</string>
    <string name="setting_quick_access_icon_color_clicked_title">Icon color (clicked)</string>
    <string name="setting_quick_access_icon_color_clicked_summary">Color of the icons when it is touched</string>
    <string name="setting_quick_access_icon_background_normal_title">Icon background color (normal)</string>
    <string name="setting_quick_access_icon_background_normal_summary">Color of the icon\'s background when it is not touched</string>
    <string name="setting_quick_access_icon_background_stroke_normal_title">Icon background stroke color (normal)</string>
    <string name="setting_quick_access_icon_background_stroke_normal_summary">Stroke color of the icon\'s background when it is not touched</string>
    <string name="setting_quick_access_icon_background_clicked_title">Icon background color (clicked)</string>
    <string name="setting_quick_access_icon_background_clicked_summary">Color of the icon\'s background when it is touched</string>
    <string name="setting_quick_access_icon_background_stroke_clicked_title">Icon background stroke color (clicked)</string>
    <string name="setting_quick_access_icon_background_stroke_clicked_summary">Stroke color of the icon\'s background when it is touched</string>
    <string name="setting_quick_access_button_title">Button</string>
    <string name="setting_quick_access_button_summary">Set different colors of the quick access button</string>
    <string name="setting_quick_access_button_normal_title">Button icon color (normal)</string>
    <string name="setting_quick_access_button_normal_summary">Color of the icon of the button when it is not touched</string>
    <string name="setting_quick_access_button_touched_title">Button icon color (touched)</string>
    <string name="setting_quick_access_button_touched_summary">Color of the icon of the button when it is touched</string>
    <string name="setting_quick_access_button_background_normal_title">Button background color (normal)</string>
    <string name="setting_quick_access_button_background_normal_summary">Color of the background of the button when it is not touched</string>
    <string name="setting_quick_access_button_background_stroke_normal_title">Button background stroke color (normal)</string>
    <string name="bottom_dialog_home_application_name">Application Name</string>
    <string name="bottom_dialog_home_package_name">Package Name</string>
    <string name="bottom_dialog_home_version_name">Version Name</string>
    <string name="bottom_dialog_home_version_code">Version Code</string>
</resources>