<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <sakuraba.saki.list.launcher.preference.TextColorChangePreferenceCategory
        android:title="@string/user_interface_setting_background_title"
        android:summary="@string/user_interface_setting_background_summary"
        app:iconSpaceReserved="false">
    
        <sakuraba.saki.list.launcher.preference.TwoSidedSwitchPreferenceCompat
            android:key="key_custom_background_image"
            android:title="@string/setting_custom_background_image_title"
            android:summary="@string/setting_custom_background_image_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />
    
        <sakuraba.saki.list.launcher.preference.TextColorChangeSwitchPreferenceCompat
            android:key="key_use_system_background"
            android:title="@string/setting_use_system_background_title"
            android:summary="@string/setting_use_system_background_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />
        
    </sakuraba.saki.list.launcher.preference.TextColorChangePreferenceCategory>
    
    <sakuraba.saki.list.launcher.preference.TextColorChangePreferenceCategory
        android:title="@string/user_interface_setting_nav_bar_title"
        android:summary="@string/user_interface_setting_nav_bar_summary"
        app:iconSpaceReserved="false">
    
        <sakuraba.saki.list.launcher.preference.TwoSidedSwitchPreferenceCompat
            android:key="key_custom_navigation_bar_color"
            android:title="@string/setting_custom_navigation_bar_title"
            android:summary="@string/setting_custom_navigation_bar_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_preference_color_block" />
        
    </sakuraba.saki.list.launcher.preference.TextColorChangePreferenceCategory>
    
    <sakuraba.saki.list.launcher.preference.TextColorChangePreferenceCategory
        android:title="@string/user_interface_setting_status_bar_title"
        android:summary="@string/user_interface_setting_status_bar_summary"
        app:iconSpaceReserved="false">
    
        <sakuraba.saki.list.launcher.preference.TextColorChangeSwitchPreferenceCompat
            android:key="key_status_bar_black_text"
            android:title="@string/setting_status_bar_black_text_title"
            android:summary="@string/setting_status_bar_black_text_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />
    
        <sakuraba.saki.list.launcher.preference.TwoSidedSwitchPreferenceCompat
            android:key="key_custom_status_bar_color"
            android:title="@string/setting_custom_status_bar_color_title"
            android:summary="@string/setting_custom_status_bar_color_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_preference_color_block" />
    
    </sakuraba.saki.list.launcher.preference.TextColorChangePreferenceCategory>
    
    <sakuraba.saki.list.launcher.preference.TextColorChangePreferenceCategory
        android:title="@string/user_interface_setting_toolbar_title"
        android:summary="@string/user_interface_setting_toolbar_summary"
        app:iconSpaceReserved="false">
        
        <sakuraba.saki.list.launcher.preference.TwoSidedSwitchPreferenceCompat
            android:key="key_custom_toolbar_background_color"
            android:title="@string/setting_custom_toolbar_bg_color_title"
            android:summary="@string/setting_custom_toolbar_bg_color_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_preference_color_block"
            app:iconSpaceReserved="false"/>
        
    </sakuraba.saki.list.launcher.preference.TextColorChangePreferenceCategory>
    
    <sakuraba.saki.list.launcher.preference.TextColorChangePreferenceCategory
        android:title="@string/user_interface_setting_text_title"
        android:summary="@string/user_interface_setting_text_summary"
        app:iconSpaceReserved="false">
        
        <sakuraba.saki.list.launcher.preference.TwoSidedSwitchPreferenceCompat
            android:key="key_custom_title_color"
            android:title="@string/setting_custom_title_color_title"
            android:summary="@string/setting_custom_title_color_summary"
            android:defaultValue="false"
            app:icon="@drawable/ic_preference_color_block"/>
    
        <sakuraba.saki.list.launcher.preference.TwoSidedSwitchPreferenceCompat
            android:key="key_custom_summary_color"
            android:title="@string/setting_custom_summary_color_title"
            android:summary="@string/setting_custom_summary_color_summary"
            android:defaultValue="false"
            app:icon="@drawable/ic_preference_color_block" />
        
    </sakuraba.saki.list.launcher.preference.TextColorChangePreferenceCategory>

</PreferenceScreen>