<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <PreferenceCategory
        android:title="@string/setting_auth_title"
        android:summary="@string/setting_auth_summary"
        app:iconSpaceReserved="false" >
    
        <SwitchPreferenceCompat
            android:key="key_use_fingerprint"
            android:title="@string/setting_use_fingerprint_title"
            android:summary="@string/setting_use_fingerprint_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />
    
        <SwitchPreferenceCompat
            android:key="key_use_pin"
            android:title="@string/setting_use_pin_title"
            android:summary="@string/setting_use_pin_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />
    
        <Preference
            android:key="key_edit_pin"
            android:title="@string/setting_pin_code_title"
            app:iconSpaceReserved="false" />
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/setting_customize_title"
        android:summary="@string/setting_customize_summary"
        app:iconSpaceReserved="false">
        
        <SwitchPreferenceCompat
            android:key="key_custom_status_bar_color"
            android:title="@string/setting_custom_status_bar_color_title"
            android:summary="@string/setting_custom_status_bar_color_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />
        
        <Preference
            android:key="key_status_bar_color"
            android:title="@string/setting_status_bar_title"
            android:summary="@string/setting_status_bar_summary"
            app:defaultValue="#FF3700B3"
            app:iconSpaceReserved="false" />
        
    </PreferenceCategory>
    
</PreferenceScreen>