<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="sakuraba.saki.list.launcher.main.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    
    <fragment
        android:id="@+id/nav_setting"
        android:name="sakuraba.saki.list.launcher.main.setting.SettingFragment"
        android:label="@string/menu_setting" />
    
    <fragment
        android:id="@+id/nav_launch_app"
        android:name="sakuraba.saki.list.launcher.main.launchApp.LaunchAppFragment"
        android:label="@string/menu_launch_app"
        tools:layout="@layout/fragment_launch_app" />
    
    <fragment
        android:id="@+id/nav_set_pin"
        android:name="sakuraba.saki.list.launcher.main.setting.SetPinFragment"
        android:label="@string/menu_set_pin"
        tools:layout="@layout/fragment_set_pin" />
    
    <fragment
        android:id="@+id/nav_pin_auth"
        android:name="sakuraba.saki.list.launcher.main.setting.PinAuthorizeFragment"
        android:label="@string/menu_pin_auth"
        tools:layout="@layout/fragment_pin_authorize" />

</navigation>