<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bg_application_info_dialog_fragment">
    
    <View
        android:layout_width="80dp"
        android:layout_height="4dp"
        android:background="@drawable/bg_bottom_sheet_pull_bar"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" />
    
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageView_icon"
        tools:ignore="ContentDescription"
        android:layout_gravity="center_horizontal" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bottom_dialog_home_application_name" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewApplicationName"
        android:gravity="center"
        android:maxLines="1"
        android:textSize="20sp"
        android:textColor="@color/black" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bottom_dialog_home_package_name" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPackageName"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/black" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSystemApp"
        android:gravity="center" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDivider"
            android:text=" | "
            tools:ignore="HardcodedText"
            android:layout_centerHorizontal="true" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/textViewDivider"
            android:id="@+id/textViewVersionNameTitle"
            android:text="@string/bottom_dialog_home_version_name"
            tools:viewBindingIgnore="true"
            tools:ignore="RelativeOverlap" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textViewDivider"
            android:id="@+id/textViewVersionCodeTitle"
            android:text="@string/bottom_dialog_home_version_code"
            tools:viewBindingIgnore="true" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewVersionName"
            android:layout_below="@id/textViewVersionNameTitle"
            android:layout_toStartOf="@id/textViewDivider"
            android:textColor="@color/black"
            android:textSize="17sp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewVersionCode"
            android:layout_below="@id/textViewVersionCodeTitle"
            android:layout_toEndOf="@id/textViewDivider"
            android:textColor="@color/black"
            android:textSize="17sp" />
    
    </RelativeLayout>

</LinearLayout>